<resources>
    <string name="app_name">MyNote</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_notes_here">Type Notes Here..</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URl</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_want_to_delete_this_note">Are you sure want to delete this note?</string>
</resources>