<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">
    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
         android:text="@string/delete_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/kufam_bold"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/kufam_regular"
        android:includeFontPadding="false"
        android:gravity="center_vertical"
        android:text="@string/are_you_sure_want_to_delete_this_note"
        android:textStyle="normal"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
        />
    
    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:textAllCaps="true"
        android:fontFamily="@font/kufam_regular"
        android:text="@string/delete_note"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/kufam_regular"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>