<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_search"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes"
        >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorSearchIcon"
            />
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/search_notes"
            android:textColorHint="@color/colorTextHint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            />
        <ImageView
            android:id="@+id/id_calendar"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_calendar"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorSearchIcon"
            android:layout_marginEnd="@dimen/_4sdp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        />

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/colorQuickActionsBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_15sdp"
        >
        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_add_outline"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />
        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_weblink"
            app:tint="@color/colorIcons" />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/background_add_button"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>